Actually fix sidebar overflow behavior
Updated CSS selector for sidebar re: c906f2

--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,7 @@ main {
   position: relative;
 }
 
-#hud {
+#sidebar {
   height: 100%;
   overflow-y: scroll;
 }
